agrege aside, faltan estilos

--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
-	  	<meta charset="utf-8">							
-	  	<link rel="stylesheet" href="css/font-awesome.css"><!--  AGREGAR LINKS-->
+		<meta charset="utf-8">							
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>La República.pe</title>
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/edith.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="js/bootstrap.min.js"> </script>
-		<script src="js/tagcanvas.min.js" type="text/javascript"></script>
-		<meta name="viewport" content="widith=device-widith, initial-scale=1.0">  <!-- para que funcione el codigo a escala -->
-		<link rel="stylesheet" href="css/style.css">
-	  	<title>La República.pe</title>
+		<script src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<header>
 			<!--banner-->
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-xs-16 col-lg-16">
-					<nav class="navbar navbar-default navbar-fixed-top" role="navigation"><!--inicio menu principal-->
+					<nav>
+						<ul class="">
+							<li><a href="#">POLÍTICA</a></li>
+							<li><a href="#">ECONOMÍA</a></li>
+							<li><a href="#">SOCIEDAD</a></li>
+							<li><a href="#">ELECC. REGIONALES</a></li>
+							<li><a href="#">DEPORTES</a></li>
+							<li><a href="#">CHAMPIONS L.</a></li>
+							<li><a href="#">ESPECTÁCULOS</a></li>
+							<li><a href="#">ED. IMPRESA</a></li>
+							<li><a href="#">REGIONALES</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div> -->
+			<div class="row">
+				<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+					<nav class="navbar bg-rojo" role="navigation">
 						<div class="container-fluid">
-							<div class="navbar-header"><!--inicio menu responsive-->
+							<div class="navbar-header">
 								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-principal">
 									<span class="sr-only">nav-responsive</span>
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-							</div><!--fin menu responsive-->
+							</div>
 						</div>
 						<div class="collapse navbar-collapse" id="menu-principal">
 							<ul class="nav navbar-nav">
@@ -50,9 +65,320 @@
 								</li>
 							</ul>
 						</div>
-					</nav><!--fin menu principal-->
+					</nav>
+				</div>
+			</div>	
+		</header>
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-3">
+						<!--banner-->
+
+					</div>
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+						
+					</div>
+					<aside>
+						<div class="row">
+							<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+								<div class="row"><!--inicio foto de descuento cuponidad-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+										<img class="img-responsive" src="image/banner-aside-home.jpg" alt="promocion">
+									</div>
+								</div><!--fin foto de descuento cuponidad-->
+								<div class="row"><!--inicio de subscribirse-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+										<img class="img-responsive" src="image/img_sucribe.png" alt="suscribe">
+										<form>
+											<div class="form-group">
+												<input type="email" class="form-control" placeholder="Email">
+											</div>
+											<button type="submit" class="btn btn-danger">SUSCRIBIRSE</button>
+										</form>
+									</div>
+								</div><!--fin de subscribirse-->
+								<div class="row"><!--inicio seccion aweita-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+										<div class="row"><!--logo aweita-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+												<img class="img-responsive center-block" src="image/logo_aweita.jpg" alt="logo-aweita">
+											</div>
+										</div><!--logo aweita-->
+										<div class="row"><!--primera foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+												<img class="img-responsive" src="image/img_aweita.jpg" alt="img-aweita">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Juan Román Riquelme, el adiós al 'Último 10' de Argentina</p>
+											</div>
+										</div><!--primera foto-->
+										<div class="row"><!--segunda foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+												<img class="img-responsive" src="image/img_lewis.png" alt="img-lewis">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Lewis Carrol: un día como hoy nació el autor de 'Alicia en el</p>
+											</div>
+										</div><!--segunda foto-->
+										<div class="row"><!--tercera foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+												<img class="img-responsive" src="image/img_aweita.jpg" alt="img-aweita">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Juan Román Riquelme, el adiós al 'Último 10' de Argentina</p>
+											</div>
+										</div><!--tercera foto-->
+										<div class="row"><!--cuarta foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+												<img class="img-responsive" src="image/img_lewis.png" alt="img-lewis">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Gameplay de 'Dead Kings', el descargable premium de 'Assassin's</p>
+											</div>
+										</div><!--cuarta foto-->
+										<div class="row">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<p class="linea-morada">Más en <span class="txt-morado">Aweita.pe</span></p>
+											</div>
+										</div>
+									</div>
+								</div><!--fin seccion aweita-->
+								<div class="row"><!--inicio de seccion foto destacada-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+										<div class="row"><!--nombre seccion-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<hr class="linea-gris">
+												<p class="txt-gris">FOTOS DESTACADAS</p>
+											</div>
+										</div><!--nombre seccion-->
+										<div class="row">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+												<img class="img-responsive" src="image/img_fotodes_prominent.jpg" alt="foto-destacada">
+												<p>Líneas de Nasca: admiten prisión preventiva de 6 meses para activista de Greenpeace | <a class="link-fotos" href="#">FOTOS</a></p>
+											</div>
+										</div>
+										<div class="row"><!--primera foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">					
+												<img class="img-responsive" src="image/img_fotodes.jpg" alt="foto2-destacada">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Uchuraccay: El pueblo que recibe con flores a quienes llegan a pie | <a class="link-fotos" href="#">FOTOS</a></p>
+											</div>
+										</div><!--primera foto-->
+										<div class="row"><!--segunda foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+												<img class="img-responsive" src="image/img_fotodes.jpg" alt="foto2-destacada">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Alianza Lima vs Fénix: íntimos ganaron 1-0 en "Noche Blanquiazul" | <a class="link-fotos" href="#">VIDEOS Y FOTOS</a></p>
+											</div>
+										</div><!--segunda foto-->
+										<div class="row"><!--tercera foto-->
+											<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+												<img class="img-responsive" src="image/foto_destacada.png" alt="foto2-destacada">
+											</div>
+											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+												<p>Tomas Berdych derrotó 3-0 a Rafael Nadal y avanzó en el Australian Open | <a class="link-fotos" href="#">FOTOS</a></p>
+											</div>
+										</div><!--tercera foto-->
+									</div>
+								</div><!--fin de seccion foto destacada-->
+								<div class="row"><!--inicio de seccion especiales-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+										<div class="row"><!--nombre seccion-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<hr class="linea-gris">
+												<p class="txt-gris">ESPECIALES</p>
+											</div>
+										</div><!--nombre seccion-->
+										<div class="row"><!--primera imagen-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+												<img class="img-responsive" src="image/" alt="regimen-laboral">
+												<p>Régimen laboral juvenil</p>
+											</div>
+										</div><!--primera imagen-->
+										<div class="row"><!--segunda imagen con dos fotos-->
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">	
+												<img class="img-responsive" src="image/" alt="visita-papa">
+												<img class="img-responsive" src="image/" alt="visita-papa2">
+												<p>COP20</p>
+											</div>
+										</div><!--segunda imagen con dos fotos-->
+										<div class="row"><!--tercera imagen-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+												<img class="img-responsive" src="image/" alt="medios">
+												<p>Concentración de Medios</p>
+											</div>
+										</div><!--tercera imagen-->
+										<div class="row"><!--cuarta imagen-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+												<img class="img-responsive" src="image/" alt="medios">
+												<p>Especies peruanas en peligro de extinsión</p>
+												<hr class="linea">
+											</div>
+										</div><!--cuarta imagen-->
+									</div>
+								</div><!--fin de seccion especiales-->
+								<div class="row"><!--inicio de seccion caricatura del dia-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+										<div class="row"><!--nombre seccion-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<hr class="linea-roja">
+												<p class="txt-roja">CARLINCATURA DEL DÍA</p>
+											</div>
+										</div><!--nombre seccion-->
+										<div class="row"><!--titulo-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<h4>Carlincaturas 30-01-2015</h4>
+												<img class="img-responsive" src="image/img_carlincatura_sd.jpg" alt="carlincaturas">
+											</div>
+										</div><!--titulo-->
+										<div class="row">
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<a class="txt-rojo" href="#">Todas las Carlincaturas</a>
+												<hr class="linea">
+											</div>
+										</div>
+									</div>
+								</div><!--fin de seccion caricatura del dia-->
+								<div class="row"><!--inicio de seccion blogueros-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+										<div class="row"><!--nombre seccion-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<hr class="linea-gris">
+												<p class="txt-gris">NUESTROS BLOGUEROS</p>
+											</div>
+										</div><!--nombre seccion-->
+										<div class="row"><!--primer bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>Charlie Hebdo, historia que no debe repetirse</p>
+											</div>
+										</div><!--primer bloguero-->
+										<div class="row"><!--segundo bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>El único pulpín es Humala</p>
+											</div>
+										</div><!--segundo bloguero-->
+										<div class="row"><!--tercer bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>Dios no ha muerto... tengo las manos</p>
+											</div>
+										</div><!--tercer bloguero-->
+										<div class="row"><!--cuarto bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>El único pulpín es Humala</p>
+											</div>
+										</div><!--cuarto bloguero-->
+										<div class="row"><!--quinto bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>Charlie Hebdo, historia que no debe repetirse</p>
+											</div>
+										</div><!--quinto bloguero-->
+										<div class="row"><!--sexto bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>El único pulpín es Humala</p>
+											</div>
+										</div><!--sexto bloguero-->
+										<div class="row"><!--septimo bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>Dios no ha muerto... tengo las manos</p>
+											</div>
+										</div><!--septimo bloguero-->
+										<div class="row"><!--octavo bloguero-->
+											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+												<img class="img-responsive" src="image/img_blogueros.jpg" alt="foto-bloguero">
+											</div>
+											<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+												<a href="#" class="txt-negro">Augusto Álvarez Rodrich</a>
+												<p>El único pulpín es Humala</p>
+
+											</div>
+										</div><!--octavo bloguero-->
+
+									</div>
+								</div><!--fin de seccion blogueros-->
+								<div class="row"><!--inicio de seccion edicion impresa-->
+									<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+										<div class="row"><!--nombre seccion-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<hr class="linea-roja">
+												<p class="txt-roja">EDICIÓN IMPRESA</p>
+											</div>
+										</div><!--nombre seccion-->
+										<div class="row"><!--titulo e imagen edicion impresa-->
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16 text-center">
+												<h4>La República - Lima</h4>
+												<img class="img-responsive" src="image/img_impreso_sd_prominent.jpg" alt="edicion-impresa">
+											</div>
+										</div><!--titulo e imagen edicion impresa-->
+										<div class="row"><!--primer periodico-->
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+												<img class="img-responsive" src="image/img_impreso_sd.jpg" alt="edicion1">
+											</div>
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+												<p>Extorsionan a menores en colegios</p>
+												<a class="txt-rojo" href="#">La República - Norte</a>
+											</div>
+										</div><!--primer periodico-->
+										<div class="row"><!--segundo periodico-->
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+												<img class="img-responsive" src="image/img_impreso_sd_politica_01.jpg" alt="edicion2">
+											</div>
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+												<p>Candidatos vinculados a la corrupción</p>
+												<a class="txt-rojo" href="#">La República - Sur</a>
+											</div>
+										</div><!--segundo periodico-->
+										<div class="row"><!--tercer periodico-->
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+												<img class="img-responsive" src="image/img_impreso_sd_politica_02.jpg" alt="edicion3">
+											</div>
+											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+												<p>En portada ONPE</p>
+												<a class="txt-rojo" href="#">Domingo</a>
+												<hr class="linea">
+											</div>
+										</div><!--tercer periodico-->
+									</div>
+								</div><!--fin de seccion edicion impresa-->
+							</div>
+						</div>
+					</aside>
+					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-3">
+						<!--banner-->
+						
+					</div>
 				</div>
 			</div>
-		</header>
+		</section>
 	</body>
 </html>
